feat(fix):[TRI-1002] jdk17 toList